--- a/boards/riscv32/wunderboard/wunderboard_defconfig
+++ b/boards/riscv32/wunderboard/wunderboard_defconfig
@@ -15,3 +15,13 @@ CONFIG_RISCV_MACHINE_TIMER=y
 CONFIG_GPIO=y
 CONFIG_GPIO_SIFIVE=y
 CONFIG_BOOT_BANNER=y
+CONFIG_WIFI_WINC1500=y
+CONFIG_WIFI_WINC1500_REGION_EUROPE=y
+CONFIG_WIFI_WINC1500_GPIO_SPI_CS=y
+CONFIG_WIFI_WINC1500_GPIO_SPI_CS_DRV_NAME="GPIO_0"
+CONFIG_WIFI_WINC1500_GPIO_SPI_CS_PIN=13
+
+CONFIG_WINC1500_GPIO_DRV_NAME="GPIO_0"
+CONFIG_WINC1500_GPIO_CHIP_EN=19
+CONFIG_WINC1500_GPIO_IRQN=18
+CONFIG_WINC1500_GPIO_RESET_N=26
