--- a/drivers/sensor/CMakeLists.txt
+++ b/drivers/sensor/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory_ifdef(CONFIG_LIS3DH		lis3dh)
 add_subdirectory_ifdef(CONFIG_LIS3MDL		lis3mdl)
 add_subdirectory_ifdef(CONFIG_LPS22HB		lps22hb)
 add_subdirectory_ifdef(CONFIG_LPS25HB		lps25hb)
+add_subdirectory_ifdef(CONFIG_LSM303C       lsm303c)
 add_subdirectory_ifdef(CONFIG_LSM6DS0		lsm6ds0)
 add_subdirectory_ifdef(CONFIG_LSM6DSL		lsm6dsl)
 add_subdirectory_ifdef(CONFIG_LSM9DS0_GYRO	lsm9ds0_gyro)
