drivers: spi: Add SiFive Freedom SPI Driver
Add a driver for the sifive,spi0 SPI device on SiFive Freedom platforms

Signed-off-by: Nathaniel Graff <nathaniel.graff@sifive.com>

--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -266,6 +266,8 @@ source "drivers/spi/Kconfig.mcux_dspi"
 
 source "drivers/spi/Kconfig.sam0"
 
+source "drivers/spi/Kconfig.sifive"
+
 source "drivers/spi/Kconfig.nrfx"
 
 endif # SPI
