--- a/arch/riscv32/soc/riscv-privilege/common/CMakeLists.txt
+++ b/arch/riscv32/soc/riscv-privilege/common/CMakeLists.txt
@@ -4,6 +4,8 @@ zephyr_sources(
   idle.c
   soc_irq.S
   soc_common_irq.c
+  atomics.c
+  atomic_cas.S
   )
 
 if(NOT(CONFIG_SOC_SERIES_RISCV32_QEMU))
