--- a/samples/philosophers/prj.conf
+++ b/samples/philosophers/prj.conf
@@ -5,4 +5,5 @@ CONFIG_ASSERT_LEVEL=2
 CONFIG_NUM_COOP_PRIORITIES=29
 CONFIG_NUM_PREEMPT_PRIORITIES=40
 CONFIG_SCHED_SCALABLE=y
+CONFIG_SMP=y
 CONFIG_USE_SWITCH=y
