--- a/drivers/sensor/lsm303c/Kconfig
+++ b/drivers/sensor/lsm303c/Kconfig
@@ -28,8 +28,6 @@ config LSM303C_I2C_ADDR
 	default 0x3A
 	help
 	  I2C address of the LSM303C sensor.
-	  Use 0x6A if the SA0 pin is pulled to GND or 0x6B if the SA0 pin
-	  is pulled to VCC.
 
 config LSM303C_I2C_MASTER_DEV_NAME
 	string "I2C master where LSM303C chip is connected"
@@ -40,6 +38,13 @@ config LSM303C_I2C_MASTER_DEV_NAME
 	  connected.
 
 endif
+
+config LSM303C_M_I2C_ADDR
+	hex "LSM303C I2C address"
+	depends on LSM303C
+	default 0x3C
+	help
+	  I2C address of the LSM303C sensor.
 
 config LSM303C_ACCEL_ENABLE_X_AXIS
 	bool "Enable accelerometer X axis"
@@ -99,24 +104,15 @@ config LSM303C_ENABLE_TEMP
 menu "Attributes"
 	depends on LSM303C
 
-config LSM303C_MAGN_FULLSCALE
-	int "Gyroscope full-scale range"
-	depends on LSM303C
-	default 245
-	help
-	  Specify the default magnetometer full-scale range.
-	  An X value for the config represents a range of +/- X degree per
-	  second. Valid values are 245, 500 and 2000.
-
 config LSM303C_MAGN_SAMPLING_RATE
 	int "Output data rate"
 	depends on LSM303C
-	default 15
+	default 10
 	help
 	  Specify the default magnetometer output data rate expressed in samples
 	  per second (Hz).
-	  Data rates supported by the chip are 0, 15, 60, 119, 238, 476,
-	  952.
+	  Data rates supported by the chip are 0.625, 1.25, 2.5, 5, 10, 20, 40, and
+	  80.
 
 config LSM303C_ACCEL_FULLSCALE
 	int "Accelerometer full-scale range"
@@ -125,7 +121,7 @@ config LSM303C_ACCEL_FULLSCALE
 	help
 	  Specify the default accelerometer full-scale range.
 	  An X value for the config represents a range of +/- X G. Valid values
-	  are 2, 4, 8 and 16.
+	  are 2, 4, and 8.
 
 config LSM303C_ACCEL_SAMPLING_RATE
 	int "Output data rate"
@@ -134,6 +130,7 @@ config LSM303C_ACCEL_SAMPLING_RATE
 	help
 	  Specify the default accelerometer output data rate expressed in
 	  samples per second (Hz).
-	  Data rates supported by the chip are 0, 10, 50, 119, 238, 476, 952.
+	  Data rates supported by the chip are 0 (off), 10, 50, 100, 200, 400, and
+	  800.
 
 endmenu
