--- a/drivers/sensor/lsm303c/Kconfig
+++ b/drivers/sensor/lsm303c/Kconfig
@@ -97,6 +97,7 @@ config LSM303C_MAGN_ENABLE_Z_AXIS
 config LSM303C_ENABLE_TEMP
 	bool "Enable temperature"
 	depends on LSM303C
+	default y
 	help
 	  Enable/disable temperature totally by stripping everything related in
 	  driver.
