Split LSM303C driver into multiple files

--- a/drivers/sensor/lsm303c/CMakeLists.txt
+++ b/drivers/sensor/lsm303c/CMakeLists.txt
@@ -1,3 +1,5 @@
 zephyr_library()
 
 zephyr_library_sources_ifdef(CONFIG_LSM303C lsm303c.c)
+zephyr_library_sources_ifdef(CONFIG_LSM303C accel.c)
+zephyr_library_sources_ifdef(CONFIG_LSM303C magn.c)
